feat: first draft of improved optional
