# example/api/v1/public.openapi.yaml
@@ -35,7 +35,18 @@ paths:
           in: query
           required: true
           schema:
-            type: integer
+            type: "object"
+            properties:
+              page:
+                type: "integer"
+                minimum: 1
+                default: 1
+              size:
+                type: "integer"
+                minimum: 1
+                maximum: 25
+                default: 10
+          explode: true
         - name: accept
           in: header
           description: >-
@@ -77,6 +88,7 @@ components:
       description: >-
         A webhook payload when a map manual trigger is pressed in an organization map.
       type: object
+      required: [sender, orgId, mapId, timestamp]
       properties:
         sender:
           description: The UUID of the user who triggered the event
@@ -91,3 +103,9 @@ components:
           description: The timestamp of the event in iso format
           type: string
           format: date-time
+        inner:
+          description: Inner object
+          type: object
+          properties:
+            a: { type: string }
+          required: [ a ]
